simplify virtual-threads usage and allow for AOT